# Serendipite

./: .gitignore  AUTHORS  LICENSE  Makefile.am  Makefile_spotify  README.md  configure.ac  http.c  http.h  json.c  json.h  lastfm-releases.c  macros.h  main.c  spotify-add-tracks.c  spotify-create-playlist.c  spotify-search.c  spotify.c  spotify.h
test/: lastfm-pretty.json  lastfm.json
